--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -51,14 +51,13 @@ nav ul li {
     float: left;
 }
 nav ul li a {
-    color: #FFFFFF;
     text-align: center;
     padding: 0px 16px 0px 32px;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
 }
-nav ul li a:hover {
+a:hover {
     color: #DA7E5C;
 }
 .visit > a:visited{
@@ -93,6 +92,11 @@ nav ul li a:hover {
 }
 
 .back:hover {
+    color: #DA7E5C;
+    cursor: pointer
+}
+
+a:hover{
     color: #DA7E5C;
     cursor: pointer
 }
